--- a/eventbrite/index.html
+++ b/eventbrite/index.html
@@ -24,11 +24,7 @@
 
 	<p><strong><u>Schedule</u></strong></p>
 
-	<p>
-		6:00 p.m. - Networking and Pizza <br/>
-		6:30 p.m. - Main Presentation <br/>
-		8:30 p.m. - Door Prizes <br/>
-	</p>
+	{% include schedule.html %}
 
 	{% endfor %}
 </body>
