--- a/index.html
+++ b/index.html
@@ -81,11 +81,20 @@
                         <h1 class="text-center">{{meeting.date | date: "%B" }} Meeting</h1>
                         <h2><a href="{{ meeting.url | prepend: site.baseurl }}" class="hover-color">{{ meeting.title }}</a></h2>
                         <ul class="list-inline blog-post-list">
-                            <li><i class="ion-calendar"></i>{{ meeting.date | date: "%B %-d, %Y" }}</li>
+                            <li>
+                                <i class="ion-calendar"></i>
+                                {{ meeting.date | date: "%B %-d, %Y" }}
+                            </li>
                             <li>|</li>
-                            <li><i class="ion-ios7-person"></i>{{ meeting.speaker }}</li>
+                            <li>
+                                <i class="ion-ios7-person"></i>{{ meeting.speaker }}
+                            </li>
                             <li>|</li>
-                            <li><a href="https://twitter.com/{{ meeting.twitter }}" class="hover-color"><i class="ion-social-twitter-outline"></i></a></li>
+                            <li>
+                                <a href="https://twitter.com/{{ meeting.twitter }}" class="hover-color">
+                                    <i class="ion-social-twitter-outline"></i>
+                                </a>
+                            </li>
                         </ul>
 
                         <h3>Abstract</h3>
@@ -97,6 +106,10 @@
                         <p>
                             {{ meeting.bio }}
                         </p>
+
+                        <div class="col-sm-6 col-sm-offset-3 col-xs-12">
+                            <a href="{{ meeting.eventbrite }}" class="btn btn-lg btn-theme">Register For Meeting</a>
+                        </div>
                     </div>
                 </div>
 
