--- a/email/index.html
+++ b/email/index.html
@@ -6,7 +6,7 @@ layout: justbootstrap
 
 {% for meeting in site.meetings limit:1 %}
 
-<p>Join us Thursday {{ meeting.date | date: "%B %-d" }}, to talk with {{ meeting.speaker}} at the Dallas C# Sig!</p>
+<p>Join us Thursday, {{ meeting.date | date: "%B %-d" }}, to talk with {{ meeting.speaker}} at the Dallas C# Sig!</p>
 
 <p><a href="{{ meeting.eventbrite }}">Register for the meeting here.</a></p>
 
