A little bit of style

--- a/email/index.html
+++ b/email/index.html
@@ -2,7 +2,7 @@
 layout: justbootstrap
 ---
 
-<div class="container">
+<div id="email" class="container">
 
 {% for meeting in site.meetings limit:1 %}
 
