--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">   
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">   
         <title>Dallas C# Sig</title>
         <meta name="description" content="HTML5 & CSS3">
         <meta name="keywords" content="HTML5, CSS3, Theme,bootstrap3,clean design"> 
