Setting up google maps

--- a/about/index.html
+++ b/about/index.html
@@ -9,6 +9,7 @@ scripts:
 ---
 
 <div class="about container">
+
   <section>
 
     <p>
@@ -23,7 +24,9 @@ scripts:
 
     <a href="http://www.improvingenterprises.com">Improving Enterprises,Inc.</a> <br>
     One Hanover Park, 16633 N. Dallas Parkway, Suite 100 <br>
-    Addison, TX 75001
+    Addison, TX 75001 <br> <br>
+
+    <a href="https://www.google.com/maps/place/Improving+Enterprises,+Inc./@32.977034,-96.826953,18z/data=!3m1!4b1!4m7!1m4!3m3!1s0x864c214428760391:0x93e3cd120aeda77a!2sImproving+Enterprises,+Inc.!3b1!3m1!1s0x864c214428760391:0x93e3cd120aeda77a">Google Maps</a>
 
   </section>
 </div>
