Starting the sponsors

--- a/index.html
+++ b/index.html
@@ -45,3 +45,17 @@ layout: main
     {% include currentMeeting.html %}
 </div>
 
+<section id="page-tree" class="sponsor-banner">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-sm-12 text-center">
+                <h1>Sponsors</h1>
+            </div>
+        </div><!--row-->
+    </div><!--container-->
+</section><!--page-tree-->
+
+<div class="container">
+    {% include sponsors.html %}
+</div>
+
