--- a/email/index.html
+++ b/email/index.html
@@ -23,7 +23,11 @@ layout: justbootstrap
 
 <p><strong><u>{{meeting.speaker}}'s Bio</u></strong></p>
 
-<p>{{ meeting.bio }}</p>
+{% for item in meeting.bio %}
+    <p>
+        {{ item }}
+    </p>
+{% endfor %}
 
 <p><strong><u>Schedule</u></strong></p>
 {{ meeting.date | date: "%B %-d, %Y" }}
