--- a/eventbrite/index.html
+++ b/eventbrite/index.html
@@ -17,7 +17,11 @@ layout: justbootstrap
 
 <p><strong><u>{{meeting.speaker}}'s Bio</u></strong></p>
 
-<p>{{ meeting.bio }}</p>
+{% for item in meeting.bio %}
+    <p>
+        {{ item }}
+    </p>
+{% endfor %}
 
 <p><strong><u>Schedule</u></strong></p>
 
